added streamlit interface

--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bc493b55",
    "metadata": {},
    "outputs": [],
@@ -19,13 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f562f47a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df=pd.read_csv(\"../Data/data.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "975d3261",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -378,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "c6acecf7",
    "metadata": {},
    "outputs": [
@@ -406,7 +414,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "cd9bb30d",
    "metadata": {},
    "outputs": [
@@ -438,7 +446,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "6cbc1747",
    "metadata": {},
    "outputs": [],
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "affa2874",
    "metadata": {},
    "outputs": [
@@ -494,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "d6f73809",
    "metadata": {},
    "outputs": [],
@@ -507,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "80f5ca37",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "7ca4591f",
    "metadata": {},
    "outputs": [],
@@ -1331,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "9ad8cbec",
    "metadata": {},
    "outputs": [],
@@ -1515,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "370ed2c2",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1531,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tufai\\AppData\\Local\\Temp\\ipykernel_17360\\4134399494.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_16120\\4134399494.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1538,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "c5478c1d",
    "metadata": {},
    "outputs": [
@@ -1546,7 +1554,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tufai\\AppData\\Local\\Temp\\ipykernel_17360\\4151778573.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_16120\\4151778573.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1561,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "e1243283",
    "metadata": {},
    "outputs": [
@@ -1569,17 +1577,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tufai\\AppData\\Local\\Temp\\ipykernel_17360\\1044889147.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_16120\\309657631.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['Employment_Maturity'] = np.log1p(df['Age'] * df['MonthsEmployed'])\n"
+      "  df.loc[:, 'Employment_Maturity'] = np.log1p(df['Age'] * df['MonthsEmployed'])\n"
      ]
     }
    ],
    "source": [
-    "df['Employment_Maturity'] = np.log1p(df['Age'] * df['MonthsEmployed'])"
+    "df.loc[:, 'Employment_Maturity'] = np.log1p(df['Age'] * df['MonthsEmployed'])"
    ]
   },
   {
@@ -1611,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "bfcceba2",
    "metadata": {},
    "outputs": [],
@@ -1622,7 +1630,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
+   "id": "ad25dcd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>MonthsEmployed</th>\n",
+       "      <th>InterestRate</th>\n",
+       "      <th>Default</th>\n",
+       "      <th>Risk_Score</th>\n",
+       "      <th>Affordability_Index</th>\n",
+       "      <th>Employment_Maturity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>85994</td>\n",
+       "      <td>50587</td>\n",
+       "      <td>80</td>\n",
+       "      <td>15.23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.529383</td>\n",
+       "      <td>135.991144</td>\n",
+       "      <td>8.407602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69</td>\n",
+       "      <td>50432</td>\n",
+       "      <td>124440</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.743125</td>\n",
+       "      <td>6.079025</td>\n",
+       "      <td>6.943122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46</td>\n",
+       "      <td>84208</td>\n",
+       "      <td>129188</td>\n",
+       "      <td>26</td>\n",
+       "      <td>21.17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36.067407</td>\n",
+       "      <td>16.947325</td>\n",
+       "      <td>7.087574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32</td>\n",
+       "      <td>31713</td>\n",
+       "      <td>44799</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>226.240000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60</td>\n",
+       "      <td>20437</td>\n",
+       "      <td>9139</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6.51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43.400000</td>\n",
+       "      <td>17.887965</td>\n",
+       "      <td>6.175867</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Income  LoanAmount  MonthsEmployed  InterestRate  Default  Risk_Score  \\\n",
+       "0   56   85994       50587              80         15.23        0   10.529383   \n",
+       "1   69   50432      124440              15          4.81        0   20.743125   \n",
+       "2   46   84208      129188              26         21.17        1   36.067407   \n",
+       "3   32   31713       44799               0          7.07        0  226.240000   \n",
+       "4   60   20437        9139               8          6.51        0   43.400000   \n",
+       "\n",
+       "   Affordability_Index  Employment_Maturity  \n",
+       "0           135.991144             8.407602  \n",
+       "1             6.079025             6.943122  \n",
+       "2            16.947325             7.087574  \n",
+       "3             0.000000             0.000000  \n",
+       "4            17.887965             6.175867  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9f12a3ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_path = \"../Data/Data_non_standarise.csv\"\n",
+    "\n",
+    "# Export the DataFrame to a CSV file\n",
+    "# index=False ensures that the pandas index (row numbers) is not included in the CSV\n",
+    "df.to_csv(output_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "a556cccb",
    "metadata": {},
    "outputs": [],
@@ -1633,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "id": "5281f8f9",
    "metadata": {},
    "outputs": [],
@@ -1643,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "cf5d4cb4",
    "metadata": {},
    "outputs": [],
@@ -1901,7 +2051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
